--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,8 @@
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
+        "jasonmccreary/laravel-test-assertions": "^2.4",
+        "laravel-shift/blueprint": "^2.10",
         "laravel/breeze": "^2.0",
         "laravel/pint": "^1.13",
         "laravel/sail": "^1.26",
